# eva-ai

./: .gitignore  CONTRIBUTION.md  README.md  package-lock.json  package.json
.github/workflows/: backend.yaml  dotnet-backend.yaml  fastapi-backend.yaml
backend/app/: Dockerfile  pyproject.toml
backend/app/api/v1/endpoints/: user.py
backend/app/core/: config.py  redis_cache.py
backend/app/notebooks/: test.ipynb
backend/app/services/: chat_service.py  document_service.py  management_service.py
backend/app/utils/: cursor_utils.py  duckduckgo-regions.json  extended_tools.py
backend/fastapi/: Readme.md
backend/fastapi/core/: curl_cffi_session_manager.py  database.py
backend/fastapi/extras/: test.ipynb
backend/fastapi/repositories/: websocket_manager.py
backend/fastapi/services/: user_service.py
backend/fastapi/utils/: best_match.py  prompt.md
backend/genai.backend.api/: .dockerignore  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  genai.backend.api.csproj
backend/genai.backend.api/Hub/: ChatHub.cs
backend/genai.backend.fastapi/: Dockerfile  main.py  requirements.txt  start.sh
backend/nosql-db/: chatdb.cql
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-history.tsx  chat.tsx  document-manager.tsx  greet.tsx  header-desktop.tsx  header-mobile.tsx  header.tsx  input.tsx  math.tsx  message-actions.tsx  sample-input.tsx  sidebar.tsx
frontend/lib/: service.ts  utils.ts
nosql-db/: Readme.md  chatdb.cql  docker-compose.yaml
(+64 files in other folders)
