[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "fastapi>=0.116.2",
    "fuzzywuzzy>=0.18.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "levenshtein>=0.27.1",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pgvector>=0.4.1",
    "pi-heif>=1.1.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "unstructured>=0.18.15",
    "unstructured-pytesseract>=0.3.15",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
